gitops/02-services/kiali/kiali-private-Gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kiali
  namespace: kiali
spec:
  gatewayClassName: tailscale
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
      hostname: kiali
