gitops/02-services/kiali/kiali-HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kiali
  namespace: kiali
spec:
  parentRefs:
    - name: kiali
      namespace: kiali
      sectionName: https
  rules:
    - backendRefs:
        - name: kiali
          port: 20001
