gitops/02-services/kiali/kiali-Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kiali
  namespace: kiali
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: kiali
      port:
        number: 20001
  tls:
    - hosts:
        - kiali
